--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
         </div>
     </div>
 
+    <!-- Main Section -->
+    <div class="main">
+        <div class="left">
+            <h1>Modern interior</h1>
+            <h3>A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</h3>
+            <p>Read more -></p>
+        </div>
+
+        <div class="right">
+            <img src="./assets/img/photo1.png" alt="">
+        </div>
+    </div>
+
 
     <script src="./app.js"></script>
 </body>
