Main Section Done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
@@ -39,14 +40,31 @@
     <div class="main">
         <div class="left">
             <h1>Modern interior</h1>
-            <h3>A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</h3>
+            <h6>A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</h6>
             <p>Read more -></p>
         </div>
 
         <div class="right">
             <img src="./assets/img/photo1.png" alt="">
+            <div class="card-overlay">
+                <div class="card-head">
+                    <img src="./assets/img/photo2.png" alt="">
+                    <div class="card-head-text">
+                        <h2>Aliza Webber</h2>
+                        <p>Interior Designer</p>
+                    </div>
+                </div>
+                <h3>Designed in 2020 by Aliza Webber</h3>
+            </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <a target="_blank" href="https://devchallenges.io/profile/rQHaHOEqwRBaW4LTN7g7">
+        <p>Prince Kukreja @DevChallenges.io</p>
+        </a>
+    </footer>
 
 
     <script src="./app.js"></script>
