--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="left">
             <h1>Modern interior</h1>
             <h6>A full-Service residential & commercial interior design and staging company offering professional organizing & eco-services.</h6>
-            <p>Read more -></p>
+            <p>Read more <span>&#8594;</span></p>
         </div>
 
         <div class="right">
